Workload member removes update/patch
