# apiv2/internal/pbapi/services/v1/services.pb.validate.go
@@ -11364,302 +11364,6 @@ var _ interface {
 	ErrorName() string
 } = ListWorkloadMembersResponseValidationError{}
 
-// Validate checks the field values on UpdateWorkloadMemberRequest with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *UpdateWorkloadMemberRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on UpdateWorkloadMemberRequest with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// UpdateWorkloadMemberRequestMultiError, or nil if none found.
-func (m *UpdateWorkloadMemberRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *UpdateWorkloadMemberRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for ResourceId
-
-	if all {
-		switch v := interface{}(m.GetWorkloadMember()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, UpdateWorkloadMemberRequestValidationError{
-					field:  "WorkloadMember",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, UpdateWorkloadMemberRequestValidationError{
-					field:  "WorkloadMember",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetWorkloadMember()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return UpdateWorkloadMemberRequestValidationError{
-				field:  "WorkloadMember",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(errors) > 0 {
-		return UpdateWorkloadMemberRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// UpdateWorkloadMemberRequestMultiError is an error wrapping multiple
-// validation errors returned by UpdateWorkloadMemberRequest.ValidateAll() if
-// the designated constraints aren't met.
-type UpdateWorkloadMemberRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m UpdateWorkloadMemberRequestMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m UpdateWorkloadMemberRequestMultiError) AllErrors() []error { return m }
-
-// UpdateWorkloadMemberRequestValidationError is the validation error returned
-// by UpdateWorkloadMemberRequest.Validate if the designated constraints
-// aren't met.
-type UpdateWorkloadMemberRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e UpdateWorkloadMemberRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e UpdateWorkloadMemberRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e UpdateWorkloadMemberRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e UpdateWorkloadMemberRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e UpdateWorkloadMemberRequestValidationError) ErrorName() string {
-	return "UpdateWorkloadMemberRequestValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e UpdateWorkloadMemberRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sUpdateWorkloadMemberRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = UpdateWorkloadMemberRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = UpdateWorkloadMemberRequestValidationError{}
-
-// Validate checks the field values on PatchWorkloadMemberRequest with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *PatchWorkloadMemberRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on PatchWorkloadMemberRequest with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// PatchWorkloadMemberRequestMultiError, or nil if none found.
-func (m *PatchWorkloadMemberRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *PatchWorkloadMemberRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for ResourceId
-
-	if all {
-		switch v := interface{}(m.GetWorkloadMember()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, PatchWorkloadMemberRequestValidationError{
-					field:  "WorkloadMember",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, PatchWorkloadMemberRequestValidationError{
-					field:  "WorkloadMember",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetWorkloadMember()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return PatchWorkloadMemberRequestValidationError{
-				field:  "WorkloadMember",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if all {
-		switch v := interface{}(m.GetFieldMask()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, PatchWorkloadMemberRequestValidationError{
-					field:  "FieldMask",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, PatchWorkloadMemberRequestValidationError{
-					field:  "FieldMask",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetFieldMask()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return PatchWorkloadMemberRequestValidationError{
-				field:  "FieldMask",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(errors) > 0 {
-		return PatchWorkloadMemberRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// PatchWorkloadMemberRequestMultiError is an error wrapping multiple
-// validation errors returned by PatchWorkloadMemberRequest.ValidateAll() if
-// the designated constraints aren't met.
-type PatchWorkloadMemberRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m PatchWorkloadMemberRequestMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m PatchWorkloadMemberRequestMultiError) AllErrors() []error { return m }
-
-// PatchWorkloadMemberRequestValidationError is the validation error returned
-// by PatchWorkloadMemberRequest.Validate if the designated constraints aren't met.
-type PatchWorkloadMemberRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e PatchWorkloadMemberRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e PatchWorkloadMemberRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e PatchWorkloadMemberRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e PatchWorkloadMemberRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e PatchWorkloadMemberRequestValidationError) ErrorName() string {
-	return "PatchWorkloadMemberRequestValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e PatchWorkloadMemberRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sPatchWorkloadMemberRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = PatchWorkloadMemberRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = PatchWorkloadMemberRequestValidationError{}
-
 // Validate checks the field values on DeleteWorkloadMemberRequest with the
 // rules defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
